[gd_scene load_steps=14 format=2]

[ext_resource path="res://starfield/starfield.tscn" type="PackedScene" id=1]
[ext_resource path="res://planet/textures/clouds.tscn" type="PackedScene" id=2]
[ext_resource path="res://ui/theme/ui_theme.tres" type="Theme" id=3]
[ext_resource path="res://ui/main-menu/main-menu.gd" type="Script" id=4]
[ext_resource path="res://ui/theme/fonts/PixelOperator.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://asteroid/asteroid-spawner.tscn" type="PackedScene" id=6]
[ext_resource path="res://planet/textures/spherify.tres" type="Shader" id=7]
[ext_resource path="res://planet/textures/oceanic.png" type="Texture" id=8]
[ext_resource path="res://ui/main-menu/planet.gd" type="Script" id=9]

[sub_resource type="ShaderMaterial" id=4]
shader = ExtResource( 7 )
shader_param/aspect_ratio = 2.0
shader_param/rotation_speed = 0.01
shader_param/as_shadow = false

[sub_resource type="CircleShape2D" id=5]
radius = 512.0

[sub_resource type="DynamicFont" id=1]
size = 192
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=3]
size = 32
font_data = ExtResource( 5 )

[node name="MainMenu" type="Node2D"]
script = ExtResource( 4 )

[node name="Decorations" type="Node2D" parent="."]

[node name="Starfield" parent="Decorations" instance=ExtResource( 1 )]
scale = Vector2( 0.25, 0.25 )
transform = Transform2D( 0.25, 0, 0, 0.25, 0, 0 )

[node name="AsteroidSpawner" parent="Decorations" instance=ExtResource( 6 )]
position = Vector2( 640, -720 )
z_index = -1
count = 128
radius = Vector2( 1280, 0 )

[node name="Body" type="Area2D" parent="Decorations" groups=["radar_objects"]]
self_modulate = Color( 1.5, 1.5, 1.5, 1 )
position = Vector2( 640, 200 )
scale = Vector2( 0.25, 0.25 )
script = ExtResource( 9 )

[node name="Sprite" type="Sprite" parent="Decorations/Body"]
self_modulate = Color( 0, 1, 0, 1 )
material = SubResource( 4 )
scale = Vector2( 0.5, 1 )
z_index = -1
texture = ExtResource( 8 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Decorations/Body"]
shape = SubResource( 5 )

[node name="Clouds" parent="Decorations/Body" instance=ExtResource( 2 )]

[node name="UI" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 1280.0
margin_bottom = 720.0
size_flags_horizontal = 8
size_flags_vertical = 8
theme = ExtResource( 3 )

[node name="List" type="VBoxContainer" parent="UI"]
margin_left = 442.0
margin_top = 192.0
margin_right = 838.0
margin_bottom = 528.0
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Title" type="Label" parent="UI/List"]
margin_right = 396.0
margin_bottom = 192.0
custom_fonts/font = SubResource( 1 )
text = "TITLE"
align = 1

[node name="Subtitle" type="Label" parent="UI/List"]
margin_top = 196.0
margin_right = 396.0
margin_bottom = 228.0
custom_fonts/font = SubResource( 3 )
text = "subtitle"
align = 1

[node name="Buttons" type="VBoxContainer" parent="UI/List"]
margin_top = 232.0
margin_right = 396.0
margin_bottom = 336.0

[node name="NewGame" type="Button" parent="UI/List/Buttons"]
margin_left = 141.0
margin_right = 255.0
margin_bottom = 32.0
focus_neighbour_left = NodePath("../Quit")
focus_neighbour_top = NodePath("../Quit")
focus_neighbour_right = NodePath("../LoadGame")
focus_neighbour_bottom = NodePath("../LoadGame")
focus_next = NodePath("../LoadGame")
focus_previous = NodePath("../Quit")
size_flags_horizontal = 4
size_flags_vertical = 8
text = "new game"

[node name="LoadGame" type="Button" parent="UI/List/Buttons"]
margin_left = 138.0
margin_top = 36.0
margin_right = 258.0
margin_bottom = 68.0
focus_neighbour_left = NodePath("../NewGame")
focus_neighbour_top = NodePath("../NewGame")
focus_neighbour_right = NodePath("../Settings")
focus_neighbour_bottom = NodePath("../Settings")
focus_next = NodePath("../Settings")
focus_previous = NodePath("../NewGame")
size_flags_horizontal = 4
disabled = true
text = "load game"

[node name="Settings" type="Button" parent="UI/List/Buttons"]
margin_left = 146.0
margin_top = 72.0
margin_right = 250.0
margin_bottom = 104.0
focus_neighbour_left = NodePath("../LoadGame")
focus_neighbour_top = NodePath("../LoadGame")
focus_neighbour_right = NodePath("../Quit")
focus_neighbour_bottom = NodePath("../Quit")
focus_next = NodePath("../Quit")
focus_previous = NodePath("../LoadGame")
size_flags_horizontal = 4
disabled = true
text = "settings"

[node name="Quit" type="Button" parent="UI/List/Buttons"]
visible = false
margin_left = 74.0
margin_top = 108.0
margin_right = 124.0
margin_bottom = 140.0
focus_neighbour_left = NodePath("../Settings")
focus_neighbour_top = NodePath("../Settings")
focus_neighbour_right = NodePath("../NewGame")
focus_neighbour_bottom = NodePath("../NewGame")
focus_next = NodePath("../NewGame")
focus_previous = NodePath("../Settings")
size_flags_horizontal = 4
text = "quit"

[connection signal="pressed" from="UI/List/Buttons/NewGame" to="." method="_on_NewGame_pressed"]
[connection signal="pressed" from="UI/List/Buttons/LoadGame" to="." method="_on_LoadGame_pressed"]
[connection signal="pressed" from="UI/List/Buttons/Settings" to="." method="_on_Settings_pressed"]
[connection signal="pressed" from="UI/List/Buttons/Quit" to="." method="_on_Quit_pressed"]
